--- a/package.json
+++ b/package.json
@@ -20,9 +20,6 @@
   "devDependencies": {
     "@types/babel__core": "^7.20.0",
     "@types/eslint": "^8.37.0",
-    "@types/node": "^20.1.2",
-    "copy-webpack-plugin": "^11.0.0",
-    "ts-loader": "^9.4.2",
-    "webpack": "^5.82.1"
+    "@types/node": "^20.1.2"
   }
 }
