--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "CommonJS",
         "moduleResolution": "node",
         "rootDir": "src",
-        "outDir": "./",
+        "outDir": "./dist",
         "strict": true,
         "removeComments": true,
         "typeRoots": ["./node_modules/@types"]
