--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   "author": "me",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.21.8",
-    "@babel/preset-env": "^7.21.5",
-    "eslint": "^8.40.0",
-    "typescript": "^5.0.4"
+    "chalk": "^4.1.2",
+    "clear": "^0.1.0",
+    "commander": "^10.0.1"
   },
   "devDependencies": {
-    "@types/babel__core": "^7.20.0",
-    "@types/eslint": "^8.37.0",
+    "@types/clear": "^0.1.2",
     "@types/node": "^20.1.2"
   }
 }
