--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
         "outDir": "./dist",
         "strict": true,
         "removeComments": true,
+        "esModuleInterop": true,
         "typeRoots": ["./node_modules/@types"]
     },
 
