--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nonmodulartranspiler",
+  "name": "vert",
   "version": "1.0.0",
-  "description": "A ts transpiler extension that omits import/export statements",
+  "description": "A tool specifically meant to de-module a js script.",
   "main": "index.js",
   "scripts": {
     "build": "tsc && copy *.json \"dist\\\" && if exist \"dist\\tsconfig.json\" del \"dist\\tsconfig.json\""
